@@ -1,3 +1,4 @@
+Assembly.cs
 AssemblyNameFlags.cs
 BindingFlags.cs
 CallingConventions.cs
