@@ -1,3 +1,8 @@
+
+Thu Sep 13 18:05:16 CEST 2001 Paolo Molaro <lupus@ximian.com>
+
+	* Assembly.cs: added stub code.
+
 2001-07-18  Michael Lambert <michaellambert@email.com>
 
 	* BindingFlags.cs: Add.
